# faster-game-of-life

./: CMakeLists.txt  README.md
src/: FieldBenchmark.cpp  FieldBenchmark.h  GameField.cpp  GameField.h  GameWidget.h  Presets.h  RLE.h  main.cpp
src/fields/: AbstractGameField.cpp  AbstractGameField.h  GameField.cpp  GameField.h
